<resources>
    <string name="app_name">GankReader</string>

    <string name="progressdialog_toast">正在加载,请稍后...</string>
    <string name="read">阅读</string>
    <string name="fuli">福利</string>
    <string name="like">收藏</string>
    <string name="setting">设置</string>
    <string name="about">关于</string>
    <string name="about_values">此App仅用于学习与尝试最新的技术，不做商业用途。</string>
    <string name="clean">清理缓存</string>
    <string name="version">当前版本</string>
    <string name="loading">加载中...</string>
    <string name="loading_end">没有更多了.</string>
    <string name="no_wifi_tips">当前不是wifi环境，是否要读取图片？</string>
    <string name="cancel_str">取消</string>
    <string name="confirm_str">确定</string>
</resources>
